# LearnOpenGL

./: .clang-format  .gitignore  CMakeLists.txt  LearnOpenGL.sln  README.md
01_TwoTriangles/: 01_TwoTriangles.vcxproj  01_TwoTriangles.vcxproj.filters
01_TwoTriangles/headers/: vgl.h
01_TwoTriangles/res/shaders/: triangles.frag  triangles.vert
01_TwoTriangles/src/: LoadShaders.cpp  main.cpp
docs/: InterfaceBlock.md  glBufferSubData.md  glCopyBufferSubData.md  glMapBuffer.md  glMapBufferRange.md  gl_FragCoord.md  gl_FragDepth.md  gl_FrontFacing.md  gl_PointSize.md  gl_VertexID.md
includes/: BaseLight.h  Camera.h  Cube.h  DirectionLight.h  FrameBuffer.h  GLFWCallback.h  Game.h  Material.h  Mesh.h  Model.h  PointLight.h  Rectangle.h  Scene.h  Shader.h  ShaderUnit.h  Sphere.h  SpotLight.h  Texture.h  Texture2D.h  TextureCubeMap.h  Util.h  VertexAttribute.h
lib/assimp/: CMakeLists.txt
lib/assimp/code/: cmake_install.cmake
lib/assimp/contrib/zlib/: CTestTestfile.cmake  cmake_install.cmake
lib/assimp/include/assimp/: revision.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/: CMakeLists.txt
lib/glm/: CMakeLists.txt
lib/stb/: CMakeLists.txt
shaders/: fragment_01.glsl  fragment_02.glsl  fragment_03.glsl  fragment_04.frag  fragment_05.glsl  fragment_06.frag  fragment_07.glsl  fragment_08.glsl  fragment_glasswind.frag  fragment_grass.frag  fragment_outline.frag  fragment_screenrect.frag  reflect_skybox.frag  refract_skybox.frag  refract_skybox.vert  skybox.frag  skybox.vert  skybox_optimized.frag  skybox_optimized.vert  vertex_01.glsl  vertex_01.vert  vertex_02.vert  vertex_07.glsl  vertex_enlarge.vert  vertex_glasswind.vert  vertex_outline.vert  vertex_screenrect.vert
src/: BaseLight.cpp  Camera.cpp  Cube.cpp  DirectionLight.cpp  FrameBuffer.cpp  GLFWCallback.cpp  Game.cpp  Material.cpp  Mesh.cpp  Model.cpp  PointLight.cpp  Rectangle.cpp  Scene.cpp  Shader.cpp  ShaderUnit.cpp  Sphere.cpp  SpotLight.cpp  Texture.cpp  Texture2D.cpp  TextureCubeMap.cpp  Util.cpp  VertexAttribute.cpp  main.cpp
